--- a/dash.html
+++ b/dash.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="dash.css">
   <script src="dash.js" defer></script>
 </head>
-
 <body>
   <h1>Dashboard</h1>
   <h2>Welcome Tapan</h2>
@@ -16,10 +15,10 @@
     <button id="fetchButton" onclick="fetchdata()">Fetch Top 10 GitHub Users</button>
     <select>
       <option>Default</option>
+      <option>Alphabet</option>
     </select>
-
     <ul id="userList"></ul>
-    <button id="logoutButton" onclick="redirectToLogin()">Logout</button>
+    <button id="logoutButton">Logout</button>
   </div>
 </body>
 </html>
